Disabled ellipsis on event titles.

--- a/widget/templates/Event_Item_1.html
+++ b/widget/templates/Event_Item_1.html
@@ -16,7 +16,7 @@
           getDateFromTimestamp}}</h1>
       </div>
       <div class="col-xs-9 text-left pull-left text-overlay">
-        <p class="margin-bottom-zero ellipsis text-overlay">{{WidgetEvent.event
+        <p class="margin-bottom-zero text-overlay">{{WidgetEvent.event
           .SUMMARY}}</p>
         <p class="margin-zero text-overlay"
            ng-if="WidgetEvent.event.endDate && !WidgetEvent.event.isAllDay">{{WidgetEvent.event.tmpStartDate |
