Deleted ellipsis in all layout for event titles

--- a/widget/templates/Event_Item_3.html
+++ b/widget/templates/Event_Item_3.html
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="info-text">
-        <p class="margin-bottom-zero ellipsis text-overlay whiteTheme">
+        <p class="margin-bottom-zero text-overlay whiteTheme">
           {{WidgetEvent.event.SUMMARY}}</p>
 
         <p class="margin-bottom-zero ellipsis text-overlay whiteTheme"
