--- a/widget/templates/Event_Item_4.html
+++ b/widget/templates/Event_Item_4.html
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="info-text">
-        <p class="margin-bottom-zero ellipsis text-overlay">
+        <p class="margin-bottom-zero text-overlay">
           {{WidgetEvent.event.SUMMARY}}</p>
 
         <p class="margin-bottom-zero ellipsis text-overlay" ng-if="WidgetEvent.event.endDate && !WidgetEvent.event.isAllDay">
