--- a/widget/templates/Event_Item_2.html
+++ b/widget/templates/Event_Item_2.html
@@ -21,7 +21,7 @@
       <div
           class="info-bar titleBarBackgroundTheme padding-top-five padding-bottom-five text-overlay">
         <div class="col-xs-12 text-left pull-left text-overlay">
-          <p class="margin-bottom-zero ellipsis titleBarTextAndIcons text-overlay">
+          <p class="margin-bottom-zero titleBarTextAndIcons text-overlay">
             {{WidgetEvent.event.SUMMARY}}</p>
 
           <p class="margin-bottom-zero ellipsis text-overlay"
