--- a/widget/templates/Event_Item_1.html
+++ b/widget/templates/Event_Item_1.html
@@ -33,7 +33,7 @@
         class="text-left padded padding-bottom-zero clearfix text-overlay">
       <p ng-if="WidgetEvent.event.SUMMARY.length>35">{{WidgetEvent.event.SUMMARY}}</p>
       <p  ng-bind-html="eventDescription" class="break-word"></p>
-      <p class="break-word">{{WidgetEvent.event.LOCATION}}</p>
+      <p class="break-word">{{WidgetEvent.event.LOCATION | formatLocation }}</p>
     </div>
   </div>
 </div>
