--- a/widget/templates/Event_Item_2.html
+++ b/widget/templates/Event_Item_2.html
@@ -41,7 +41,7 @@
       <p ng-if="WidgetEvent.event.SUMMARY.length>42">{{WidgetEvent.event.SUMMARY}}</p>
       <hr class="small" ng-if="WidgetEvent.event.DESCRIPTION">
       <p  ng-bind-html="eventDescription" class="break-word"></p>
-      <p class="break-word">{{WidgetEvent.event.LOCATION}}</p>
+      <p class="break-word">{{WidgetEvent.event.LOCATION | formatLocation }}</p>
     </div>
   </div>
 </div>
