Let user know if the iCal feed is too big to load

--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -29,5 +29,8 @@
         >There is
       an error with this feed. Please check and try again.
     </div>
+    <div class="alert alert-sm alert-warning margin-top-ten" ng-show="ContentHome.largePayload">
+      Your iCal Feed seems to be too big and takes too much time to load. Please consider deleting old and redundant events.
+    </div>
   </div>
 </div>
