--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -9,7 +9,7 @@
              ng-change="ContentHome.clearData()"/>
     </div>
     <div class="col-md-4 pull-right">
-      <button class="btn btn-primary pull-right stretch"
+      <button class="btn btn-success pull-right stretch"
               ng-click="ContentHome.validateCalUrl()"
               ng-disabled="!ContentHome.calUrl">Validate
       </button>
