change the wording for payload too large warning

--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -30,7 +30,7 @@
       an error with this feed. Please check and try again.
     </div>
     <div class="alert alert-sm alert-warning margin-top-ten" ng-show="ContentHome.largePayload">
-      Your iCal Feed seems to be too big and takes too much time to load. Please consider deleting old and redundant events.
+      Warning: Your calendar feed seems to be very large and will load slowly for your users. Please consider deleting old and redundant events to prevent longer load times
     </div>
   </div>
 </div>
